--- a/named.conf
+++ b/named.conf
@@ -10,7 +10,7 @@
 // configuration located in /usr/share/doc/bind-{version}/Bv9ARM.html
 
 options {
-	listen-on port 53 { 127.0.0.1; 192.168.1.210; };
+	listen-on port 53 { 127.0.0.1; 10.10.20.221; };
 #	listen-on-v6 port 53 { ::1; };
 	directory 	"/var/named";
 	dump-file 	"/var/named/data/cache_dump.db";
@@ -18,7 +18,7 @@ options {
 	memstatistics-file "/var/named/data/named_mem_stats.txt";
 	recursing-file  "/var/named/data/named.recursing";
 	secroots-file   "/var/named/data/named.secroots";
-	allow-query     { localhost; 192.168.1.0/24; };
+	allow-query     { localhost; 10.10.20.0/24; };
 
 	/* 
 	 - If you are building an AUTHORITATIVE DNS server, do NOT enable recursion.
@@ -37,7 +37,7 @@ options {
                 8.8.4.4;
         };
 
-	dnssec-enable yes;
+	#dnssec-enable yes; // Broken on newer versions of named, advised to just comment out this bit
 	dnssec-validation yes;
 
 	/* Path to ISC DLV key */
